buildscript {
	ext {
		springBootVersion = '2.0.3.RELEASE'
	}
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
	}
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'hello'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 1.8
targetCompatibility = 1.8

//application {
//    applicationDefaultJvmArgs = ['--add-opens', 'java.base/jdk.internal.loader=ALL-UNNAMED']
//}

repositories {
	mavenCentral()
  // maven {
  //   url "https://www.oracle.com/content/secure/maven/content"
  //   credentials {
  //     username 'name'
  //     password 'pass'
  //   }
  // }
}

dependencies {
  implementation('org.springframework.boot:spring-boot-starter-web')
  implementation('org.springframework.boot:spring-boot-starter-data-jpa')
  implementation files('lib/ojdbc8.jar')
  //testCompile('com.h2database:h2')
  //compile ('com.oracle.jdbc:ojdbc6:11.2.0.4')
  testCompileOnly('org.springframework.boot:spring-boot-starter-test')
  //implementation("org.flywaydb:flyway-core:5.1.4")
  implementation("org.springframework.boot:spring-boot-starter-thymeleaf")
  implementation("org.springframework.boot:spring-boot-starter-security")
  implementation("org.springframework.boot:spring-boot-starter-web-services")
  implementation ('org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.1')
  compileOnly ('org.projectlombok:lombok:1.18.24')
  annotationProcessor ('org.projectlombok:lombok:1.18.24')
  implementation 'org.webjars:jquery:3.5.0'
  implementation 'org.webjars:bootstrap:4.4.1-1'
  implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect:2.3.0'
  
  
}
